Added hero, cards, and story images; updated HTML, CSS, and JS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="lady.png" alt="">
                 </div>
                 <div class="overview-hero-text">
                     <h2>Live  your healthiest life now!</h2>
@@ -39,21 +39,21 @@
                 <h2>Learn About</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="ai.png" alt="">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
                             <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="tracker.png" alt="">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="Health.png" alt="">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
                             <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
@@ -69,7 +69,7 @@
                     <p>Providing secure and connected COVID-19 screening and testing services to communities in collaboration with public health agencies and industry partners.</p>
                 </div>
                 <div class="cta">
-                    <a href="#" class="btn">Learn More</a>
+                    <a href="Doctor.jpeg" class="btn">Learn More</a>
                 </div>
             </div>
         </section>
@@ -81,7 +81,7 @@
                     <div class="article-body">
                         <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.</h3>
                         <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that support better care.</p>
-                        <p><a href="#">Read this Story</a></p>
+                        <p><a href="pills.jpg">Read this Story</a></p>
                     </div>
                 </article>
                 <article>
